--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  app:
+  app_universal2:
     build: '.'
     ports:
-     - "3000:80"
+     - "3000:4000"
     restart: always
