--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  app_universal2:
+  app_universal:
     build: '.'
     ports:
-     - "3000:4000"
+     - "3001:4000"
     restart: always
