--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nguniversal/express-engine": "^7.0.0",
         "@nguniversal/module-map-ngfactory-loader": "^7.0.0",
         "bootstrap": "^4.1.3",
+        "circular-json": "^0.5.9",
         "core-js": "^2.5.4",
         "ngx-logger": "^3.3.6",
         "rxjs": "^6.3.0",
